<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="xyz.adelgado.nanodegreeportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/popular_movies"
        android:onClick="launchPopularMovies"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/stock_hawk"
        android:onClick="launchStockHawk"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/build_it_bigger"
        android:onClick="launchBuildBigger"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/make_your_app_material"
        android:onClick="launchAppMaterial"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/go_ubiquitous"
        android:onClick="launchUbiquitous"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/capstone"
        android:onClick="launchCapstone"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>
